objects/Admin_Credentials__c.object
<CustomObject>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client_Secret</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instance_Type__c</fullName>
        <label>Instance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Admin Credentials</label>
    <nameField>
        <label>Admin Credentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>